--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <router-view></router-view>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
