basic bootstrap sidebar is there but more work needed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
 
   <body>
-    <div id="app">
+    <div id="app" class="container-fluid">
+      <main>
         <router-view></router-view>
+      </main>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
