some layout updates

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id="app" class="container-fluid">
-      <main>
+      <main class="row">
         <router-view></router-view>
       </main>
     </div>
