--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devta</title>
-  </head>
 
-  <body>
-    <div id="app" class="container-fluid">
-      <main class="row">
-        <router-view></router-view>
-      </main>
-    </div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Devta</title>
+</head>
+
+<body>
+  <div id="app">
+  </div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
