--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Elevate your development experience with Devta, the ultimate tool for simplifying and enhancing your daily
+                tasks." />
   <title>Devta</title>
 </head>
 
