--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link  rel="icon" type="image/svg+xml" href="src/assets/tablogol.svg"/>
+  <link rel="icon" type="image/svg+xml" href="src/assets/tablogol.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Elevate your development experience with Devta, the ultimate tool for simplifying and enhancing your daily
-                tasks." />
+  <meta name="description"
+    content="Elevate your development experience with Devta, the ultimate tool for simplifying and enhancing your daily tasks." />
   <title>Devta</title>
 </head>
 
@@ -17,4 +17,3 @@
 </body>
 
 </html>
-
