--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Devta</title>
 </head>
 
-<body>
+<body data-bs-theme="">
   <div id="app">
   </div>
   <script type="module" src="/src/main.js"></script>
