Added electron to the project and added build workflow

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/tablogol.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Elevate your development experience with Devta, the ultimate tool for simplifying and enhancing your daily tasks."
+    />
+    <link rel="icon" href="/logo.png" />
+    <title>Devta</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/tablogol.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Elevate your development experience with Devta, the ultimate tool for simplifying and enhancing your daily tasks." />
-  <title>Devta</title>
-</head>
-
-<body data-bs-theme="">
-  <div id="app">
-  </div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body data-bs-theme="">
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
