Electron linux build fix

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/tablogol.svg" />
+    <link rel="icon" type="image/png" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Elevate your development experience with Devta, the ultimate tool for simplifying and enhancing your daily tasks."
     />
-    <link rel="icon" href="/logo.png" />
     <title>Devta</title>
   </head>
 
